--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "^10.0.0",
     "next-fonts": "^1.4.0",
     "prop-types": "^15.7.2",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-inlinesvg": "^2.1.1",
@@ -41,7 +42,8 @@
     "styled-jsx": "^3.3.1",
     "styled-jsx-plugin-postcss": "^3.0.2",
     "swr": "^0.3.6",
-    "zustand": "^3.1.3"
+    "zustand": "^3.1.3",
+    "zustand-persist": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
