--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^2.9.4",
     "next": "^10.0.0",
     "next-fonts": "^1.4.0",
+    "next-google-fonts": "^1.2.1",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
