--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv-webpack": "^4.0.0",
     "emotion-theming": "^10.0.27",
     "framer-motion": "^2.9.4",
+    "fs": "^0.0.1-security",
     "next": "^10.0.0",
     "next-fonts": "^1.4.0",
     "next-google-fonts": "^1.2.1",
@@ -39,7 +40,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-inlinesvg": "^2.1.1",
+    "react-markdown": "^5.0.2",
     "react-sizes": "^2.0.0",
+    "remark-footnotes": "^3.0.0",
+    "remark-gemoji": "^6.0.0",
+    "remark-gfm": "^1.0.0",
+    "remark-highlight.js": "^6.0.0",
     "styled-jsx": "^3.3.1",
     "styled-jsx-plugin-postcss": "^3.0.2",
     "swr": "^0.3.6",
