--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "*.{js,css,html,json}, !.next/*": "npx prettier --write"
   },
   "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
-    "@emotion/core": "^10.1.0",
-    "@emotion/styled": "^10.0.27",
+    "@chakra-ui/icons": "^1.0.0",
+    "@chakra-ui/react": "^1.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "@zeit/next-css": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "color-js": "^1.0.5",
     "dotenv-webpack": "^4.0.0",
-    "emotion-theming": "^10.0.27",
     "framer-motion": "^2.9.4",
     "fs": "^0.0.1-security",
     "next": "^10.0.0",
