--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^17.0.1",
     "react-inlinesvg": "^2.1.1",
     "react-markdown": "^5.0.2",
+    "react-select": "^3.1.1",
     "react-sizes": "^2.0.0",
     "remark-footnotes": "^3.0.0",
     "remark-gemoji": "^6.0.0",
@@ -55,12 +56,13 @@
   "devDependencies": {
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^6.0.1",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
     "postcss-custom-media": "^7.0.8",
