--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
     "react-inlinesvg": "^2.1.1",
     "react-markdown": "^5.0.2",
     "react-select": "^3.1.1",
