--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@uiw/react-md-editor": "^2.0.0",
     "@zeit/next-css": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "color-js": "^1.0.5",
