Last Front-end adjustments

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -21,7 +21,8 @@
       "@/components": ["components"],
       "@/components/*": ["components/*"],
       "@/containers": ["containers"],
-      "@/lib/*": ["lib/*"]
+      "@/lib/*": ["lib/*"],
+      "@/custom-ckeditor/*":["custom-ckeditor/*"]
     }
   }
 }
