--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.0",
     "@chakra-ui/react": "^1.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@uiw/react-md-editor": "^2.0.0",
@@ -33,16 +34,19 @@
     "dotenv-webpack": "^4.0.0",
     "framer-motion": "^2.9.4",
     "fs": "^0.0.1-security",
+    "highlight.js": "^10.4.1",
     "next": "^10.0.0",
     "next-fonts": "^1.4.0",
     "next-google-fonts": "^1.2.1",
     "prop-types": "^15.7.2",
+    "quill-image-uploader": "^1.2.2",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
     "react-inlinesvg": "^2.1.1",
     "react-markdown": "^5.0.2",
+    "react-quill": "^1.3.5",
     "react-select": "^3.1.1",
     "react-sizes": "^2.0.0",
     "remark-footnotes": "^3.0.0",
