--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babel-eslint": "^10.1.0",
     "color-js": "^1.0.5",
     "dotenv-webpack": "^4.0.0",
+    "firebase": "^8.2.1",
+    "firebase-admin": "^9.4.2",
     "framer-motion": "^2.9.4",
     "fs": "^0.0.1-security",
     "highlight.js": "^10.4.1",
