--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@emotion/styled": "^11.0.0",
     "@uiw/react-md-editor": "^2.0.0",
     "@zeit/next-css": "^1.0.1",
+    "airtable": "^0.10.1",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "color-js": "^1.0.5",
     "dotenv-webpack": "^4.0.0",
