--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-quill": "^1.3.5",
     "react-select": "^3.1.1",
     "react-sizes": "^2.0.0",
+    "react-syntax-highlighter": "^15.4.3",
     "remark-footnotes": "^3.0.0",
     "remark-gemoji": "^6.0.0",
     "remark-gfm": "^1.0.0",
