--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv-webpack": "^4.0.0",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
+    "formidable": "^1.2.2",
     "framer-motion": "^2.9.4",
     "fs": "^0.0.1-security",
     "highlight.js": "^10.4.1",
@@ -62,6 +63,7 @@
     "styled-jsx": "^3.3.1",
     "styled-jsx-plugin-postcss": "^3.0.2",
     "swr": "^0.3.6",
+    "uuidv4": "^6.2.6",
     "zustand": "^3.1.3",
     "zustand-persist": "^0.3.0"
   },
