--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next": "^10.0.0",
     "next-fonts": "^1.4.0",
     "next-google-fonts": "^1.2.1",
+    "nookies": "^2.5.2",
     "prop-types": "^15.7.2",
     "quill-image-uploader": "^1.2.2",
     "ramda": "^0.27.1",
