--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ckeditor/ckeditor5-react": "^3.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@heroicons/react": "^1.0.0",
     "@uiw/react-md-editor": "^2.0.0",
     "@zeit/next-css": "^1.0.1",
     "airtable": "^0.10.1",
